--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 
     <h1 style="background-color: aquamarine;"> Audio Section </h1>
     <h2> Motivation Music </h2>
-    <audio src="motive1.mp3" controls> </audio>
-    <audio src="motive2.mp3" controls> </audio>
-    <audio src="motive3.mp3" controls> </audio>
-    <audio src="motive4.mp3" controls> </audio>
+    <audio src="vibe1.mp3" controls> </audio>
+    <audio src="vibe2.mp3" controls> </audio>
+    <audio src="vibe3.mp3" controls> </audio>
+    <audio src="vibe4.mp3" controls> </audio>
 
     <h2> Study Music </h2>
-    <audio src="study1.m4a" controls> </audio>
-    <audio src="study2.m4a" controls> </audio>
-    <audio src="study3.mp3" controls> </audio>
-    <audio src="study4.mp3" controls> </audio>
+    <audio src="vibe1.mp3" controls> </audio>
+    <audio src="vibe2.mp3" controls> </audio>
+    <audio src="vibe3.mp3" controls> </audio>
+    <audio src="vibe4.mp3" controls> </audio>
 
     <h2> Vibe Music </h2>
     <audio src="vibe1.mp3" controls> </audio>
